# filkopiering

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
filkopiering/: filkopiering.csv  filkopiering.spec.example  main.py
filkopiering/test/: test_file_copy.py
tests/: kopiering.csv
