[tool.poetry]
name = "Filkopiering"
version = "0.1.0"
description = ""
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = "^3.8"
gooey = "^1.0.8"
pyinstaller = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"
black = "^21.11b1"
flake8 = "^3.9.1"
mypy = "^0.812"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
