[tool.poetry]
name = "Filkopiering"
version = "0.2.1"
description = ""
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = "^3.9"
gooey = "^1.0.8"
pyinstaller = "^4.5.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^5.0.1"
mypy = "^0.812"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
